@@ -28,7 +28,6 @@
 //
 #define METER_DETECTION \
     X(CCx01,     MANUFACTURER_GSS,  0x02,  0x01) \
-    X(HYDROCALM3,MANUFACTURER_BMT,  0x0d,  0x0b) \
     X(HYDRODIGIT,MANUFACTURER_BMT,  0x06,  0x13) \
     X(HYDRODIGIT,MANUFACTURER_BMT,  0x07,  0x13) \
     X(HYDRODIGIT,MANUFACTURER_BMT,  0x07,  0x15) \
